syntax/tests/parsing/errors/expressions/consecutive.ns
let f = (a,b) => a + 3b;

let f = (g, h) => {
 a + 3b
}

let () = {
  sideEffect1() sideEffect2()
}

let () = {
  open Foo exception End
  x()
}
